--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>HTML</h2>
         <ul>
           <li>The head element contains information about the webpage.</li>
+          <li> HTML stands for Hypertext markup language</li>
           <li>The body element represents the visible content shown to the user.</li>
         </ul>
       </section>
